--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.application.name=mssc-brewery-config
+server.port=8888
 
+spring.cloud.config.server.git.uri=https://github.com/JoseNeyra/example-config-repo
+spring.cloud.config.server.git.clone-on-start=true
+
+logging.level.org.springframework.cloud=debug
+logging.level.org.springframework.web=debug
