--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,11 @@ spring.cloud.config.server.git.search-paths={application}
 logging.level.org.springframework.cloud=debug
 logging.level.org.springframework.web=debug
 
-# Should be env property , this is the private key to encrypt and decrypt properties
+#Spring Security
+spring.security.user.name=MyUserName
+spring.security.user.password=MySecretPassword
+
+#Eureka credentials URL
+eureka.client.service-url.defaultZone=http://netflix:eureka@localhost:8761/eureka
+
 encrypt.key=MySuperSecretKey
